--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Ein <strong>Portfolio</strong></p>
+    <img src="foto.1.port..jpg" / >
 </body>
 </html>
