--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>Ein <strong>Portfolio</strong></p>
-    <img src="foto.1.port..jpg" alt="foto.1.port..jpg" / >
+    <img src="foto1.port..jpg" />
 </body>
 </html>
