--- a/portfolio.html
+++ b/portfolio.html
@@ -9,5 +9,9 @@
 <body>
     <p>Ein <strong>Portfolio</strong></p>
     <img src="foto1.port..jpg" />
+    <img src="foto1_big.jpg" />
+    <img src="foto2.jpg" />
+    <img src="foto3.jpg" />
+    <img src="foto4.jpg" />
 </body>
 </html>
