--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>Ein <strong>Portfolio</strong></p>
-    <img src="foto1.port..jpg" />
+    <center><a href="file:///C:/Users/lukic/OneDrive/Documents/GitHub/EIA_EiSe22-23/Untitled-1.html" target="_blank"><img src="foto1.port..jpg" alt="IMAGE DESCRIPTION"></a></center>
     <img src="foto2.jpg" />
     <img src="foto3.jpg" />
     <img src="foto4.jpg" />
