--- a/portfolio.html
+++ b/portfolio.html
@@ -7,10 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Ein <strong>Portfolio</strong></p>
-    <center><a href="file:///C:/Users/lukic/OneDrive/Documents/GitHub/EIA_EiSe22-23/Untitled-1.html" target="_blank"><img src="foto1.port..jpg" alt="IMAGE DESCRIPTION"></a></center>
-    <img src="foto2.jpg" />
-    <img src="foto3.jpg" />
-    <img src="foto4.jpg" />
+    <center>
+        <p></p><a href="file:///C:/Users/lukic/OneDrive/Documents/GitHub/EIA_EiSe22-23/Untitled-1.html" target="_blank"><img src="foto1.port..jpg" ></a></p>
+        <p><img src="foto2.jpg" alt=""></p>
+        <p><img src="foto3.jpg" alt=""></p>
+        <p><img src="foto4.jpg" alt=""></p>
+
+    </center>
+    
+    
 </body>
 </html>
