--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <center>
+        <h1>Portfolio</h1>
         <p></p><a href="file:///C:/Users/lukic/OneDrive/Documents/GitHub/EIA_EiSe22-23/Untitled-1.html" target="_blank"><img src="foto1.port..jpg" ></a></p>
         <p><img src="foto2.jpg" alt=""></p>
         <p><img src="foto3.jpg" alt=""></p>
