--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
         <p><img src="foto2.jpg" alt=""></p>
         <p><img src="foto3.jpg" alt=""></p>
         <p><img src="foto4.jpg" alt=""></p>
+        <video src="clip1.mp4" controls></video>
 
     </center>
     
