--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,10 @@
         <p><img src="foto3.jpg" alt=""></p>
         <p><img src="foto4.jpg" alt=""></p>
         <video src="clip1.mp4" controls></video>
+        <video src="clip2.mp4" controls></video>
+        <video src="clip3.mp4" controls></video>
+        <video src="clip4.mp4" controls></video>
+
 
     </center>
     
