--- a/Aufgabe4/Contact.html
+++ b/Aufgabe4/Contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Ana Lukic">
     <meta name="description" comtent="">
-    <title>About me</title>
+    <title>Contact</title>
     <style>
         html {
             font-size: 22px;
@@ -16,16 +16,15 @@
         }
     </style>
 </head>
-<body>
+<footer>
     <center>
-        <h1>About me </h1>
-        <hr>
-        <p>Name: Ana Lukic</p>
-        <p>Adresse: Bregstr. 37</p>
-        <p>Wohnsitz: Furtwangen</p>
-        <p>Geburtsdatum: 15.12.2000.</p>
+        <h1>Contact</h1>
+        <p>Author: Ana Lukic<br>
+        <a href="mailto:lukic.ana20@gmail.com">lukic.ana20@gmail.com</a></p>
+        <p>Tel.: 017685979100</p>
+    <hr>
+        <address>
+        Written by <a href="mailto:lukic.ana20@gmail.com">Ana Lukic</a>.<br> 
+        </address>
     </center>
-
-
-    
-</body>
+</footer>
